--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
 		<li onclick="" class="websites col-xs-6 col-sm-4 col-md-3 col-lg-3">
 			
       <div class="item">
-      	<img src="img/portfolio/thumbnails/infinite-scroll.jpg">
+      	<img src="img/portfolio/thumbnails/infinite-scroll.PNG">
 
       	<div class="icons">
       		
