--- a/index.html
+++ b/index.html
@@ -357,11 +357,11 @@
 		<li onclick="" class="websites col-xs-6 col-sm-4 col-md-3 col-lg-3">
 			
       <div class="item">
-      	<img src="img/portfolio/thumbnails/infinite-scroll.PNG">
+      	<img src="img/portfolio/thumbnails/infinite-scroll.jpg">
 
       	<div class="icons">
       		
-      		<a href="img/portfolio/thumbnails/infinite-scroll1" title="Infinite Scroll" class="openButton" data-fancybox data-caption="Happy Scrolling!">
+      		<a href="img/portfolio/thumbnails/infinite-scroll1.PNG" title="Infinite Scroll" class="openButton" data-fancybox data-caption="Happy Scrolling!">
       			<i class="fa fa-search">
       				
       			</i>
