--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
 					  	   	<i class="fa fa-code"></i>
 					  	   </div>
 					  	   <div class="squareContent">
-					  	        <h2 class="counter">3</h2>
+					  	        <h2 class="counter">10</h2>
 					  	        <h3>Websites</h3>
 					  	    </div>
 					  </div>
@@ -275,7 +275,7 @@
 
       	<div class="icons">
       		
-      		<a href="img/portfolio/thumbnails/joke-teller1.png" title="View image" class="openButton" data-fancybox data-caption="This is a text-to-speech API based Joke Teller">
+      		<a href="img/portfolio/thumbnails/joke-teller1.PNG" title="View image" class="openButton" data-fancybox data-caption="This is a text-to-speech API based Joke Teller">
       			<i class="fa fa-search">
       				
       			</i>
